
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct flush_tlb_data {int addr1; int vma; } ;


 int local_flush_tlb_page (int ,int ) ;

__attribute__((used)) static void flush_tlb_page_ipi(void *info)
{
 struct flush_tlb_data *fd = (struct flush_tlb_data *)info;

 local_flush_tlb_page(fd->vma, fd->addr1);
}
